# langgraph_campusx

./: .gitignore  0_test_installation.ipynb  10_persistence.ipynb  1_bmi_workflow.ipynb  2_simple_llm_workflow.ipynb  3_prompt_chaining.ipynb  4_batsman_workflow.ipynb  5_essay_workflow.ipynb  6_quadratic_equation_workflow.ipynb  7_review_reply_workflow.ipynb  8_X_post_generator_workflow.ipynb  9_simple_chatbot_workflow.ipynb  pyproject.toml
langgraph_chatbot/: langgraph_backend.py  streamlit_frontend.py
